REOPENED210791
[css-flexbox] The percentage height resolution quirk shouldn't be applied to flexboxes
https://bugs.webkit.org/show_bug.cgi?id=210791
Summary [css-flexbox] The percentage height resolution quirk shouldn't be applied to ...
Carlos Alberto Lopez Perez
Reported 2020-04-21 05:02:48 PDT
The following WPT test fails on WebKit: https://wpt.live/css/css-flexbox/quirks-auto-block-size-with-percentage-item.html This test will pass if strict mode its enabled instead of quirks: --- a/css/css-flexbox/quirks-auto-block-size-with-percentage-item.html +++ b/css/css-flexbox/quirks-auto-block-size-with-percentage-item.html @@ -1,4 +1,4 @@ -<!-- quirks mode --> +<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"> <link rel="author" title="Morten Stenshorne" href="mailto:mstensho@chromium.org"> <link rel="help" href="https://www.w3.org/TR/CSS22/visudet.html#the-height-property"> <meta name="assert" content="The percentage height resolution quirk isn't applied to flexboxes."> This passes on both Firefox and Chrome. See also bug 210243
Attachments
Patch (16.30 KB, patch)
2021-07-23 11:56 PDT, Rob Buis
no flags
Patch (15.93 KB, patch)
2021-07-23 13:39 PDT, Rob Buis
no flags
Patch (15.99 KB, patch)
2021-07-24 00:10 PDT, Rob Buis
ews-feeder: commit-queue-
Philip Jägenstedt
Comment 1 2020-12-10 00:27:03 PST
I believe that this Safari-only test failure is also because of this bug: https://wpt.fyi/results/quirks/percentage-height-quirk-excludes-flex-grid-001.html
Rob Buis
Comment 2 2021-07-23 11:56:18 PDT
Rob Buis
Comment 3 2021-07-23 13:39:57 PDT
EWS Watchlist
Comment 4 2021-07-23 13:40:55 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Rob Buis
Comment 5 2021-07-24 00:10:49 PDT
Ahmad Saleem
Comment 6 2022-09-18 04:52:03 PDT
Safari Technology Preview 153 is only browser failing this test: https://wpt.fyi/results/quirks/percentage-height-quirk-excludes-flex-grid-001.html?label=experimental&label=master&aligned Is something planned or in queue? Thanks!
Radar WebKit Bug Importer
Comment 7 2024-02-08 13:17:00 PST
Sammy Gill
Comment 8 2024-03-04 15:33:46 PST
We pass css-flexbox/quirks-auto-block-size-with-percentage-item.html now but looks like we are failing the row flexbox portion of https://wpt.fyi/results/quirks/percentage-height-quirk-excludes-flex-grid-001.html
Ahmad Saleem
Comment 9 2024-03-04 15:54:58 PST
(In reply to Sammy Gill from comment #8) > We pass css-flexbox/quirks-auto-block-size-with-percentage-item.html now but > looks like we are failing the row flexbox portion of > https://wpt.fyi/results/quirks/percentage-height-quirk-excludes-flex-grid- > 001.html NOTE - I tried this PR in the past and have background discussion as well (it is based of Rob's patch): https://github.com/WebKit/WebKit/pull/16581 It leads to failing `datalist-searchinput-appearance.html` test with just change in 'DumpTree' output but rendering-wise, we don't have any issue.
Ahmad Saleem
Comment 10 2026-02-27 16:00:16 PST
Sammy Gill
Comment 11 2026-03-02 14:04:22 PST
Looks like this also has a user facing issue on zoom.com where it becomes difficult to click the "Copy Invitation" button.
Sammy Gill
Comment 12 2026-03-02 14:05:25 PST
Sammy Gill
Comment 13 2026-03-02 14:36:45 PST
EWS
Comment 14 2026-03-30 14:11:55 PDT
Committed 310254@main (aeb2eadcea86): <https://commits.webkit.org/310254@main> Reviewed commits have been landed. Closing PR #59741 and removing active labels.
Sammy Gill
Comment 15 2026-03-31 14:24:41 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58894
Sammy Gill
Comment 16 2026-03-31 15:41:01 PDT
Reopened Bugzilla. REGRESSION(310254@main): bsky.app: Site content does not load, shows a spinner only, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=311231.
Sammy Gill
Comment 17 2026-03-31 23:02:29 PDT
From an initial investigation I think my change introduced a bunch of tree walks with nested flex content which is why the page never seemed to load. So probably need to come up with a more efficient way to tackle this
Note You need to log in before you can comment on or make changes to this bug.