[css-flexbox] The percentage height resolution quirk shouldn't be applied to flexboxes

https://bugs.webkit.org/show_bug.cgi?id=210791

Reviewed by NOBODY (OOPS!).

Patch Authored and Credits to Rob Buis.

This PR modifies to always skip percentage height resolution quirk for flexbox/grid.

* Source/WebCore/rendering/RenderBox.cpp:
(RenderBox::skipContainingBlockForPercentHeightCalculation const):
* LayoutTests/TestExpectations: Update and remove passing tests